tests/suite/fail/generated/borrow/fail_move_use_s.ny
fn use(x: string) -> void { print(x) }
fn main() {
    let s = "hello"
    use(s)
    print(s) //~ ERROR was moved
}
